SourceOrg/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>KUIC Technology Marketing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Hubspot Qualified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Salesforce Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>InventionTechnology1_on_Lead__c</fullName>
        <label>Invention Technology 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventionTechnology2_on_Lead__c</fullName>
        <label>Invention Technology 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventionTechnology3_on_Lead__c</fullName>
        <label>Invention Technology 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventionTrackCode1_on_Lead__c</fullName>
        <externalId>true</externalId>
        <label>Invention Track Code 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventionTrackCode2_on_Lead__c</fullName>
        <externalId>true</externalId>
        <label>Invention Track Code 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InventionTrackCode3_on_Lead__c</fullName>
        <externalId>true</externalId>
        <label>Invention Track Code 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invention_Name1__c</fullName>
        <label>Invention Name1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invention_Name2__c</fullName>
        <label>Invention Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invention_Name3__c</fullName>
        <label>Invention Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Hubspot_TrackCodeID__c</fullName>
        <description>This is a field that synchronizes Hubspot Track Code ID field</description>
        <inlineHelpText>This is a field that synchronizes Hubspot Track Code ID field</inlineHelpText>
        <label>Lead - Hubspot Track Code ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_SIC_Description_from_Data_com__c</fullName>
        <label>Lead - SIC Description from Data.com</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_SIC_From_Data_com__c</fullName>
        <label>Lead - SIC From Data.com</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_System__c</fullName>
        <description>Hidden field to identify SFDC leads in Hubspot</description>
        <label>Lead Source System</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketed_Invention_1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketed Invention 1</label>
        <referenceTo>Invention__c</referenceTo>
        <relationshipLabel>Leads (Marketed Invention 1)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketed_Invention_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketed Invention 2</label>
        <referenceTo>Invention__c</referenceTo>
        <relationshipLabel>Leads (Marketed Invention 2)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketed_Invention_3__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Marketed Invention 3</label>
        <referenceTo>Invention__c</referenceTo>
        <relationshipLabel>Leads (Marketed Invention 3)</relationshipLabel>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MAAssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Assignment Rule</label>
        <referenceTo>sma__MAAssignmentRule__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Lead_Hubspot_TrackCodeID__c</columns>
        <columns>Marketed_Invention_1__c</columns>
        <columns>InventionTrackCode1_on_Lead__c</columns>
        <columns>Marketed_Invention_2__c</columns>
        <columns>Marketed_Invention_3__c</columns>
        <columns>Marketed_Invention_4__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_Status_not_New</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Lead_Hubspot_TrackCodeID__c</columns>
        <columns>InventionTrackCode1_on_Lead__c</columns>
        <columns>InventionTrackCode2_on_Lead__c</columns>
        <columns>InventionTrackCode3_on_Lead__c</columns>
        <columns>InventionTrackCode4_on_Lead__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>New</value>
        </filters>
        <label>Lead Status not New</label>
        <sharedTo>
            <group>KUIC_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Marketed_Invention_1__c</columns>
        <columns>InventionTrackCode1_on_Lead__c</columns>
        <columns>Marketed_Invention_2__c</columns>
        <columns>InventionTrackCode2_on_Lead__c</columns>
        <columns>Marketed_Invention_3__c</columns>
        <columns>InventionTrackCode3_on_Lead__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KUIC_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Unqualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Marketed_Invention_1__c</columns>
        <columns>InventionTrackCode1_on_Lead__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <label>My Unqualified Leads</label>
        <sharedTo>
            <group>All_KU_System_Administrators</group>
            <group>KUIC_Marketing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Month_s_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Marketed_Invention_1__c</columns>
        <columns>InventionTrackCode1_on_Lead__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Email_Validation</fullName>
        <active>false</active>
        <description>Email is mandatory on Lead</description>
        <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
        <errorMessage>Email is mandatory on Leads. Please enter an Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LeadConvertedNoInventionOrSourceCheck</fullName>
        <active>false</active>
        <description>Lead must have a Source and at least one Marketed Invention associated before it is converted</description>
        <errorConditionFormula>OR(
AND(ISBLANK(Marketed_Invention_1__c),IsConverted=True), AND(ISBLANK(TEXT(LeadSource)),IsConverted=True)
)</errorConditionFormula>
        <errorMessage>Please select Marketed Invention1 and Lead Source before converting Lead</errorMessage>
    </validationRules>
</CustomObject>